fix: dark mode page équipe

--- a/src/styles/pages/team.css
+++ b/src/styles/pages/team.css
@@ -4,7 +4,7 @@
 
 main {
     padding: 52px var(--padding);
-    background-color: var(--primary-color);
+    background-color: #B94503;
 }
 
 h1 {
